<resources>
    <string name="app_name">Projekt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="meres">Mérés</string>
    <string name="meres_prompt">Nyomjon a gombra a meres kezdesehez.</string>
    <string name="netes_adat">Netes Adat</string>
    <string name="vissza_a_menube">Vissza a menube</string>
    <string name="name_calorie_prompt">Kérem írja be a nevét és hogy óránként hány kalóriát éget.</string>
    <string name="mi_a_neve">Mi a Neve?</string>
    <string name="hany_kaloriat_eget">Hany kaloriat eget.</string>
    <string name="mentes">Mentes</string>
    <string name="update_calorie_counter">Update Calorie Counter</string>
    <string name="macska_t_nyek">Macska Tények</string>

    <string-array name="meno_adat">
        <item>Futas</item>
        <item>Uszas</item>
        <item>Gyorsabb futas</item>
        <item>Ping-pong</item>
        <item>Futball</item>
    </string-array>
</resources>