<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:text="@string/name_calorie_prompt"
        android:textColor="#5E35B1"
        app:layout_constraintBottom_toTopOf="@id/mero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nev_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/kaloria_field"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        android:autofillHints=""
        android:background="@color/teal_700"/>

    <EditText
        android:id="@+id/kaloria_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/nev_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        android:autofillHints=""
        android:background="@color/teal_700"/>

    <Button
        android:id="@+id/mero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/net"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/mento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mentes"
        app:layout_constraintEnd_toEndOf="@id/nev_field"
        app:layout_constraintStart_toEndOf="@id/kaloria_field"
        app:layout_constraintTop_toBottomOf="@id/kaloria_field" />

    <Button
        android:id="@+id/net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/netes_adat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mento"
        app:layout_constraintTop_toBottomOf="@+id/mento" />

    <Button
        android:id="@+id/cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/macska_t_nyek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/net"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first"
        />

</androidx.constraintlayout.widget.ConstraintLayout>